--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,4 +31,4 @@ jobs:
 
     - name: Push Docker Image
       run: |
-        docker push varelajuan860/docker-graphql:0.0.2 .
+        docker push varelajuan860/docker-graphql:0.0.2
